# ML-bacterial-phenotyping

./: .gitignore  README.md  pyproject.toml
notebooks/: dna_to_image.ipynb  eda_analysis.ipynb  esmc.ipynb  genome_metadata.ipynb  genome_summary.ipynb  ml_training.ipynb  plot_results.ipynb  results_AMR_data.ipynb  results_bacformer_data.ipynb  torch_test.ipynb
scripts/: CNN.py  CNN_v2.py  CNN_v3.py  RNN.py  Transformers_and_S4Ms.py  dnn.py  download_genomes.py  embeddings.py  homology_clustering.py  kmer_sampling.py  pca_analysis.py  train_models.py
scripts/models/: CNN.py  CNN_v3.py  RNN.py  Transformers_and_S4Ms.py  dnn.py
scripts/utilities/: download_genomes.py  pca_analysis.py
shell_scripts/: CNN.sh  CNN_std.sh  CNN_v2.sh  RNN.sh  RNN_std.sh  basic_script.sh  download_genomes.sh
src/: embeddings.py  train_models.py  train_models_v2.py
src/embeddings/: KmerTokenization.py  esmc_embeddings.py  integer_embeddings.py  tokenization.py
src/models/: CNN.py  CNN_alternative_version.py  RNN.py  Transformers_and_S4Ms.py  dnn.py
src/utilities/: RF_classification.py  baselines.py  cliargparser.py  clustering.py  dna_bpe.ipynb  dna_bpe.py  exploratory_data_analysis.py  homology_clustering.py  ncbi_api.py  pca_analysis.py  plotting.py
tests/: test_clustering.py  test_embedding_tokenization.py  test_tokenization.py
