[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bact_pheno"
version = "0.1.0"
description = "Bact pheno package"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Torbjorn Regueira", email = "s203555@dtu.dk" }]
dependencies = ["torch>=2.5", 
                "numpy>=2.3", 
                "scikit-learn>=1.7", 
                "matplotlib>=3.10", 
                "seaborn>=0.13",
                "pandas>=2.3",
                "argparse>=1.4",
                "tqdm=>4.67",
                "wandb>=0.23",
                "esm>=3.2",
                "biopython>=1.86",
                "joblib>=1.5",
                "httpx>=0.28",
                "fastparquet>=2024.11",
                "sourmash>=4.9",
                "shap>=0.50",
                "tf-keras>=2.20",
                "click>=8.1",
                "fastparquet>=1.3"]

[project.scripts]
bacml = "bacml:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]