[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bact_pheno"
version = "0.1.0"
description = "Bact pheno package"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Torbjorn Regueira", email = "s203555@dtu.dk" }]
dependencies = ["torch",
                "scikit-learn",
                "matplotlib",
                "seaborn",
                "pandas",
                "argparse",
                "tqdm",
                "wandb",
                "esm",
                "biopython",
                "joblib",
                "httpx",
                "fastparquet",
                "sourmash",
                "shap",
                "tf-keras",
                "click",
                "fastcluster",
                "scipy"]

[project.scripts]
bacml = "bacml:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]